[tool.poetry]
name = "nonebot_plugin_matchreminder"
version = "1.2.0"
description = "定时设置算法比赛赛前提醒，提醒群友别错过比赛，查询codeforce，atc，牛客比赛消息"
authors = ["zhuhiki <z1607258120@163.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_matchreminder"}]
homepage = "https://github.com/zhuhiki/nonebot_plugin_matchreminder"
repository = "https://github.com/zhuhiki/nonebot_plugin_matchreminder"

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = { version = "^2.0.0", extras = ["fastapi"] }
nonebot-adapter-onebot = ">=2.1.5"
httpx = ">=0.20.0,<1.0.0"
fake-useragent = ">=1.1.3"
bs4 = ">=0.0.1"
asyncio = ">=3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"