[project]
name = "nonebot_plugin_matchreminder"
version = "1.0.1"
description = "定时设置算法比赛赛前提醒，提醒群友别错过比赛，查询codeforce，atc，牛客比赛消息"
authors = [
    {name = "zhuhiki", email = "z1607258120@163.com"},
]
dependencies = [ "lxml>=4.9.3",
    "bs4>=0.0.1",
    "nonebot2>=2.0.1",
    "httpx>=0.23.3",
"nonebot-adapter-onebot>=2.1.5",
"fake-useragent>=1.1.3",
"asyncio>=3.4.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
